--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <link rel="stylesheet" href="build/style/styles.css">
 </head>
 <body>
-  <header>
+  <header class="topHeader">
     HEADER
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#test">Testing</a>
   </header>
   <div class="pages">
     <section class="page home">
