Countdown timer bitches!

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#test">Testing</a>
+    <span class="countdown"></span>
   </header>
   <div class="pages">
     <section class="page home">
