Add initial sections and location map

--- a/index.html
+++ b/index.html
@@ -9,112 +9,37 @@
   <header class="topHeader">
     HEADER
     <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#test">Testing</a>
+    <a href="#registry">Registry</a>
+    <a href="#location">Location</a>
+    <a href="#schedule">Schedule</a>
+    <a href="#gallery">Gallery</a>
   </header>
   <div class="pages">
     <section class="page home">
       Testing
-      <a href="#about">About</a>
+      <a href="#location">About</a>
     </section>
 
-    <section class="page about">
+    <section class="page location">
       About
+      <div id="map" style="width: 100%; height: 300px;"></div>
       <a href="#test">Test</a>
     </section>
 
-    <section class="page test">
-      Wooooo
-      <a href="#gohere">go</a>
-      <pre>
+    <section class="page registry">
 
+    </section>
 
+    <section class="page schedule">
 
+    </section>
 
+    <section class="page gallery">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      </pre>
-      <a name="gohere">HERE</a>
-      <pre>
-        
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        
-      </pre>
     </section>
   </div>
   <script type="text/javascript" src="build/vendor/vendor.min.js"></script>
   <script type="text/javascript" src="build/js/all.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjFrwpCIb4D7sh3WR0xMm_-PQBQ9KsOuE&callback=initMap" async defer></script>
 </body>
 </html>
