> :penguin: :tada: add basic onepage scroll

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Kenjy 2016</title>
   <link rel="stylesheet" href="build/style/styles.css">
+  <link rel="stylesheet" href="vendor/onepage-scroll/onepage-scroll.css">
 </head>
 <body>
   <header class="topHeader">
@@ -15,7 +16,7 @@
     <a href="#gallery">Gallery</a>
     <span class="countdown"></span>
   </header>
-  <div class="pages">
+  <div class="main">
     <section class="page home">
       Testing
       <a href="#location">About</a>
@@ -40,6 +41,7 @@
     </section>
   </div>
   <script type="text/javascript" src="build/vendor/vendor.min.js"></script>
+  <script type="text/javascript" src="vendor/onepage-scroll/onepage-scroll.min.js"></script>
   <script type="text/javascript" src="build/js/all.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjFrwpCIb4D7sh3WR0xMm_-PQBQ9KsOuE&callback=initMap" async defer></script>
 </body>
