> :globe_with_meridians: misc map changes

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     </section>
 
     <section class="page location">
-      About
-      <div id="map" style="width: 100%; height: 300px;"></div>
-      <a href="#test">Test</a>
+      <div id="map" style="width: 50%; height: 50vh;margin-top:25vh;"></div>
     </section>
 
     <section class="page registry">
